# data-connectors

./: .gitignore  Pipfile  README.md  env.example  project_configuration.yaml  pyproject.toml  requirements.txt  setup.py
.junie/: guidelines.md
data_connectors/: project_configuration.yaml  settings.py  utils.py
data_connectors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data_connectors/apps/: data_app.py
data_connectors/fundamentals/: crypto_fundamentals.py  equity_fundamentals.py
data_connectors/fundamentals/coingecko/: crypto_fundamentals.py
data_connectors/fundamentals/databento/: market_cap.py
data_connectors/fundamentals/polygon/: equity_fundamentals.py
data_connectors/helpers/: __init__.py  asset_consistency.py  s3_utils.py
data_connectors/interest_rates/: nodes.py
data_connectors/interest_rates/registries/: discount_curves.py  fixing_rates.py
data_connectors/notebooks/: alpaca_daily_test.ipynb  banxico_mbonos.ipynb  banxico_tiie_fixing.ipynb  binance_daily.ipynb  coingecko_market_cap.ipynb  discount_curves.ipynb  fundamentals.ipynb  polygon_market_cap.ipynb
data_connectors/prices/alpaca/: time_series.py
data_connectors/prices/banxico/: __init__.py  builders.py  data_nodes.py  (+2 more)
data_connectors/scripts/: create_asset_categories.py  create_translation_tables.py
data_connectors/websockets/: __main__.py  bar.py  consumers.py  time_series.py
notebooks/: alpaca_daily.ipynb  binance_daily.ipynb  coingecko_market_cap.ipynb  databento_prices.ipynb  valmer_prices.ipynb
scripts/: create_asset_categories.py  create_translation_tables.py  run_all_source.py  update_pricing_details_from_vector.py  update_rates_pricing_curves.py  update_vector_valmer.py  update_zero_curves.py
src/algoseek/: eda.ipynb  nodes.py
src/data_connectors/: utils.py
tests/: scratch.py  test_prices.py
(+49 files in other folders)
