[build-system]
requires = [
  "setuptools>=61",
  "wheel",
  "tomli; python_version < '3.11'"
]
build-backend = "setuptools.build_meta"

[project]
name = "data_connectors"
version = "3.0.0"
authors = [{ name = "Main Sequence GmbH" }]
requires-python = ">=3.10.0"

# From Pipfile [packages]
dependencies = [
  "mainsequence",
  "python-dotenv",
  "xlrd",
]

# From Pipfile custom sections -> extras
[project.optional-dependencies]
"prices-alpaca" = [
  "alpaca-py",
]
"data-bento"=[  "databento", ]

"prices-binance" = [
  "python-binance",
  "python-coinmarketcap",
  "pycoingecko",
  "ccxt",
  "numba",
  "minio",
]

[tool.setuptools]
# Map project root -> src/ (src layout)
package-dir = {"" = "src"}

# Mirror find_packages(include=['data_connectors','data_connectors.*'])
[tool.setuptools.packages.find]
where = ["src"]
include = ["data_connectors", "data_connectors.*"]
